Improved styles and fix bug in Whac-A-Mole game, it was difficult to click the moles, because the hole was covering the mole to much. Now we throw confetty and restar the game when the Whac a mole game finish, to give some feedback to the user

--- a/SPAs/hub-games-component/src/pages/Login/Login.css
+++ b/SPAs/hub-games-component/src/pages/Login/Login.css
@@ -3,7 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     padding: 0.5rem;
     gap: 1.5rem;
@@ -12,12 +12,12 @@
 
 #login-msg-welcome {
     margin: 0;
-    font-size: 5vw;
+    font-size: 3vw;
     /* border: 1px solid red; */
 }
 
 #login-msg-user-name {
-    font-size: 3vw;
+    font-size: 2.5vw;
     /* border: 1px solid red; */
 }
 
@@ -26,13 +26,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 45vw;
+    width: 35vw;
     padding: 1.5rem 0;
     margin-top: 0rem;
+    margin-bottom: 2vw;
     gap: 2rem;
     /* border: 0.2rem solid black; */
     border-radius: 1rem;
-    box-shadow: -5px -5px 10px #08224c,  5px 5px 10px #08224c;
+    box-shadow: -5px -5px 10px #08224c, 5px 5px 10px #08224c;
 }
 
 #login-input {
@@ -45,7 +46,7 @@
     border: 2px solid #3D9AE2;
     border-radius: 1rem;
     background-color: whitesmoke;
-    box-shadow: -5px -5px 10px #08224c,  5px 5px 10px #08224c;
+    box-shadow: -5px -5px 10px #08224c, 5px 5px 10px #08224c;
 }
 
 #login-btn {
@@ -55,10 +56,10 @@
     text-align: center;
     color: #08224c;
     font-weight: 800;
-    border:2px solid #89d2df;
+    border: 2px solid #89d2df;
     border-radius: 100px;
     background-color: whitesmoke;
-    box-shadow: -5px -5px 10px #08224c,  5px 5px 10px #08224c;
+    box-shadow: -5px -5px 10px #08224c, 5px 5px 10px #08224c;
 }
 
 @media only screen and (max-width: 600px) {
@@ -69,7 +70,7 @@
     #login-msg-user-name {
         font-size: 5vw;
     }
-    
+
     #login-display-container {
         width: 75vw;
     }
